HVAC Backup 2/objects/Defective_Details__c.object
<CustomObject>
    <fields>
        <fullName>Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Defective Details</relationshipLabel>
        <relationshipName>Defective_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Defective Details</relationshipLabel>
        <relationshipName>Defective_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket Line Item</label>
        <referenceTo>WorkOrderLineItem</referenceTo>
        <relationshipLabel>Defective Details</relationshipLabel>
        <relationshipName>Defective_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Ticket__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Ticket</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Defective Details</relationshipLabel>
        <relationshipName>Defective_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Defective Details</label>
    <nameField>
        <displayFormat>DDN-{0000}</displayFormat>
        <label>Defective Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Defective Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>